WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
111803
[WK2] Blobs are not cleaned up when WebProcess terminates
https://bugs.webkit.org/show_bug.cgi?id=111803
Summary
[WK2] Blobs are not cleaned up when WebProcess terminates
Alexey Proskuryakov
Reported
2013-03-07 18:23:07 PST
NetworkBlobRegistry in NetworkProcess does not clean up registered blobs when a process that owns one crashes. <
rdar://problem/13363499
>
Attachments
proposed fix
(8.19 KB, patch)
2013-03-07 18:30 PST
,
Alexey Proskuryakov
beidson
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2013-03-07 18:30:48 PST
Created
attachment 192122
[details]
proposed fix
Alexey Proskuryakov
Comment 2
2013-03-08 09:40:50 PST
Committed <
http://trac.webkit.org/r145236
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug